ag/y.output
Grammar

    0 $accept: yyyAugNonterm $end

    1 yyyAugNonterm: Start

    2 Start: Program

    3 Program: %empty
    4        | Program Selector ';'
    5        | Program Class ';'

    6 Selector: Type ID '(' OBJECT OptType ')'

    7 OptType: %empty
    8        | OptType ',' Type

    9 Type: INT
   10     | OBJECT

   11 Class: CLASS ID MemberStart END

   12 MemberStart: OptMember

   13 OptMember: %empty
   14          | OptMember Member ';'

   15 Member: Type ID
   16       | Type ID '(' Par Pars ')' Stats Return END

   17 Pars: %empty
   18     | Pars ',' Par

   19 Par: Type ID

   20 Stats: %empty
   21      | Stats Stat ';'

   22 Stat: Return
   23     | Conditions
   24     | Type ID LEFTASSIGN Expr
   25     | ID LEFTASSIGN Expr
   26     | Expr

   27 Return: RETURN Expr

   28 Conditions: COND OptGuarded END

   29 OptGuarded: %empty
   30           | OptGuarded Guarded ';'

   31 Guarded: RIGHTASSIGN Stats ContinueOrBreak
   32        | Expr RIGHTASSIGN Stats ContinueOrBreak

   33 ContinueOrBreak: CONTINUE
   34                | BREAK

   35 Expr: Term
   36     | Negations Term
   37     | Term PlusTerm
   38     | Term MulTerm
   39     | Term OrTerm
   40     | Term '#' Term
   41     | Term '>' Term
   42     | NEW ID

   43 Negations: NOT
   44          | '-'
   45          | Negations NOT
   46          | Negations '-'

   47 PlusTerm: '+' Term
   48         | PlusTerm '+' Term

   49 MulTerm: '*' Term
   50        | MulTerm '*' Term

   51 OrTerm: OR Term
   52       | OrTerm OR Term

   53 RepExpr: %empty
   54        | RepExpr ',' Expr

   55 Term: '(' Expr ')'
   56     | NUM
   57     | NULLTERM
   58     | ID
   59     | ID '(' Expr RepExpr ')'


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 40
    '(' (40) 6 16 55 59
    ')' (41) 6 16 55 59
    '*' (42) 49 50
    '+' (43) 47 48
    ',' (44) 8 18 54
    '-' (45) 44 46
    ';' (59) 4 5 14 21 30
    '>' (62) 41
    error (256)
    OBJECT (258) 6 10
    INT (259) 9
    CLASS (260) 11
    END (261) 11 16 28
    RETURN (262) 27
    COND (263) 28
    CONTINUE (264) 33
    BREAK (265) 34
    NOT (266) 43 45
    OR (267) 51 52
    NEW (268) 42
    NULLTERM (269) 57
    ID (270) 6 11 15 16 19 24 25 42 58 59
    NUM (271) 56
    LEFTASSIGN (272) 24 25
    RIGHTASSIGN (273) 31 32


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    yyyAugNonterm <yyyOxAttrbs> (29)
        on left: 1
        on right: 0
    Start (30)
        on left: 2
        on right: 1
    Program (31)
        on left: 3 4 5
        on right: 2 4 5
    Selector (32)
        on left: 6
        on right: 4
    OptType (33)
        on left: 7 8
        on right: 6 8
    Type (34)
        on left: 9 10
        on right: 6 8 15 16 19 24
    Class (35)
        on left: 11
        on right: 5
    MemberStart (36)
        on left: 12
        on right: 11
    OptMember (37)
        on left: 13 14
        on right: 12 14
    Member (38)
        on left: 15 16
        on right: 14
    Pars (39)
        on left: 17 18
        on right: 16 18
    Par (40)
        on left: 19
        on right: 16 18
    Stats (41)
        on left: 20 21
        on right: 16 21 31 32
    Stat (42)
        on left: 22 23 24 25 26
        on right: 21
    Return (43)
        on left: 27
        on right: 16 22
    Conditions (44)
        on left: 28
        on right: 23
    OptGuarded (45)
        on left: 29 30
        on right: 28 30
    Guarded (46)
        on left: 31 32
        on right: 30
    ContinueOrBreak (47)
        on left: 33 34
        on right: 31 32
    Expr (48)
        on left: 35 36 37 38 39 40 41 42
        on right: 24 25 26 27 32 54 55 59
    Negations (49)
        on left: 43 44 45 46
        on right: 36 45 46
    PlusTerm (50)
        on left: 47 48
        on right: 37 48
    MulTerm (51)
        on left: 49 50
        on right: 38 50
    OrTerm (52)
        on left: 51 52
        on right: 39 52
    RepExpr (53)
        on left: 53 54
        on right: 54 59
    Term (54)
        on left: 55 56 57 58 59
        on right: 35 36 37 38 39 40 41 47 48 49 50 51 52


State 0

    0 $accept: . yyyAugNonterm $end

    $default  reduce using rule 3 (Program)

    yyyAugNonterm  go to state 1
    Start          go to state 2
    Program        go to state 3


State 1

    0 $accept: yyyAugNonterm . $end

    $end  shift, and go to state 4


State 2

    1 yyyAugNonterm: Start .

    $default  reduce using rule 1 (yyyAugNonterm)


State 3

    2 Start: Program .
    4 Program: Program . Selector ';'
    5        | Program . Class ';'

    OBJECT  shift, and go to state 5
    INT     shift, and go to state 6
    CLASS   shift, and go to state 7

    $default  reduce using rule 2 (Start)

    Selector  go to state 8
    Type      go to state 9
    Class     go to state 10


State 4

    0 $accept: yyyAugNonterm $end .

    $default  accept


State 5

   10 Type: OBJECT .

    $default  reduce using rule 10 (Type)


State 6

    9 Type: INT .

    $default  reduce using rule 9 (Type)


State 7

   11 Class: CLASS . ID MemberStart END

    ID  shift, and go to state 11


State 8

    4 Program: Program Selector . ';'

    ';'  shift, and go to state 12


State 9

    6 Selector: Type . ID '(' OBJECT OptType ')'

    ID  shift, and go to state 13


State 10

    5 Program: Program Class . ';'

    ';'  shift, and go to state 14


State 11

   11 Class: CLASS ID . MemberStart END

    $default  reduce using rule 13 (OptMember)

    MemberStart  go to state 15
    OptMember    go to state 16


State 12

    4 Program: Program Selector ';' .

    $default  reduce using rule 4 (Program)


State 13

    6 Selector: Type ID . '(' OBJECT OptType ')'

    '('  shift, and go to state 17


State 14

    5 Program: Program Class ';' .

    $default  reduce using rule 5 (Program)


State 15

   11 Class: CLASS ID MemberStart . END

    END  shift, and go to state 18


State 16

   12 MemberStart: OptMember .
   14 OptMember: OptMember . Member ';'

    OBJECT  shift, and go to state 5
    INT     shift, and go to state 6

    $default  reduce using rule 12 (MemberStart)

    Type    go to state 19
    Member  go to state 20


State 17

    6 Selector: Type ID '(' . OBJECT OptType ')'

    OBJECT  shift, and go to state 21


State 18

   11 Class: CLASS ID MemberStart END .

    $default  reduce using rule 11 (Class)


State 19

   15 Member: Type . ID
   16       | Type . ID '(' Par Pars ')' Stats Return END

    ID  shift, and go to state 22


State 20

   14 OptMember: OptMember Member . ';'

    ';'  shift, and go to state 23


State 21

    6 Selector: Type ID '(' OBJECT . OptType ')'

    $default  reduce using rule 7 (OptType)

    OptType  go to state 24


State 22

   15 Member: Type ID .
   16       | Type ID . '(' Par Pars ')' Stats Return END

    '('  shift, and go to state 25

    $default  reduce using rule 15 (Member)


State 23

   14 OptMember: OptMember Member ';' .

    $default  reduce using rule 14 (OptMember)


State 24

    6 Selector: Type ID '(' OBJECT OptType . ')'
    8 OptType: OptType . ',' Type

    ','  shift, and go to state 26
    ')'  shift, and go to state 27


State 25

   16 Member: Type ID '(' . Par Pars ')' Stats Return END

    OBJECT  shift, and go to state 5
    INT     shift, and go to state 6

    Type  go to state 28
    Par   go to state 29


State 26

    8 OptType: OptType ',' . Type

    OBJECT  shift, and go to state 5
    INT     shift, and go to state 6

    Type  go to state 30


State 27

    6 Selector: Type ID '(' OBJECT OptType ')' .

    $default  reduce using rule 6 (Selector)


State 28

   19 Par: Type . ID

    ID  shift, and go to state 31


State 29

   16 Member: Type ID '(' Par . Pars ')' Stats Return END

    $default  reduce using rule 17 (Pars)

    Pars  go to state 32


State 30

    8 OptType: OptType ',' Type .

    $default  reduce using rule 8 (OptType)


State 31

   19 Par: Type ID .

    $default  reduce using rule 19 (Par)


State 32

   16 Member: Type ID '(' Par Pars . ')' Stats Return END
   18 Pars: Pars . ',' Par

    ','  shift, and go to state 33
    ')'  shift, and go to state 34


State 33

   18 Pars: Pars ',' . Par

    OBJECT  shift, and go to state 5
    INT     shift, and go to state 6

    Type  go to state 28
    Par   go to state 35


State 34

   16 Member: Type ID '(' Par Pars ')' . Stats Return END

    $default  reduce using rule 20 (Stats)

    Stats  go to state 36


State 35

   18 Pars: Pars ',' Par .

    $default  reduce using rule 18 (Pars)


State 36

   16 Member: Type ID '(' Par Pars ')' Stats . Return END
   21 Stats: Stats . Stat ';'

    OBJECT    shift, and go to state 5
    INT       shift, and go to state 6
    RETURN    shift, and go to state 37
    COND      shift, and go to state 38
    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 42
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Type        go to state 46
    Stat        go to state 47
    Return      go to state 48
    Conditions  go to state 49
    Expr        go to state 50
    Negations   go to state 51
    Term        go to state 52


State 37

   27 Return: RETURN . Expr

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 54
    Negations  go to state 51
    Term       go to state 52


State 38

   28 Conditions: COND . OptGuarded END

    $default  reduce using rule 29 (OptGuarded)

    OptGuarded  go to state 55


State 39

   43 Negations: NOT .

    $default  reduce using rule 43 (Negations)


State 40

   42 Expr: NEW . ID

    ID  shift, and go to state 56


State 41

   57 Term: NULLTERM .

    $default  reduce using rule 57 (Term)


State 42

   25 Stat: ID . LEFTASSIGN Expr
   58 Term: ID .
   59     | ID . '(' Expr RepExpr ')'

    LEFTASSIGN  shift, and go to state 57
    '('         shift, and go to state 58

    $default  reduce using rule 58 (Term)


State 43

   56 Term: NUM .

    $default  reduce using rule 56 (Term)


State 44

   55 Term: '(' . Expr ')'

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 59
    Negations  go to state 51
    Term       go to state 52


State 45

   44 Negations: '-' .

    $default  reduce using rule 44 (Negations)


State 46

   24 Stat: Type . ID LEFTASSIGN Expr

    ID  shift, and go to state 60


State 47

   21 Stats: Stats Stat . ';'

    ';'  shift, and go to state 61


State 48

   16 Member: Type ID '(' Par Pars ')' Stats Return . END
   22 Stat: Return .

    END  shift, and go to state 62

    $default  reduce using rule 22 (Stat)


State 49

   23 Stat: Conditions .

    $default  reduce using rule 23 (Stat)


State 50

   26 Stat: Expr .

    $default  reduce using rule 26 (Stat)


State 51

   36 Expr: Negations . Term
   45 Negations: Negations . NOT
   46          | Negations . '-'

    NOT       shift, and go to state 63
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 64

    Term  go to state 65


State 52

   35 Expr: Term .
   37     | Term . PlusTerm
   38     | Term . MulTerm
   39     | Term . OrTerm
   40     | Term . '#' Term
   41     | Term . '>' Term

    OR   shift, and go to state 66
    '+'  shift, and go to state 67
    '*'  shift, and go to state 68
    '>'  shift, and go to state 69
    '#'  shift, and go to state 70

    $default  reduce using rule 35 (Expr)

    PlusTerm  go to state 71
    MulTerm   go to state 72
    OrTerm    go to state 73


State 53

   58 Term: ID .
   59     | ID . '(' Expr RepExpr ')'

    '('  shift, and go to state 58

    $default  reduce using rule 58 (Term)


State 54

   27 Return: RETURN Expr .

    $default  reduce using rule 27 (Return)


State 55

   28 Conditions: COND OptGuarded . END
   30 OptGuarded: OptGuarded . Guarded ';'

    END          shift, and go to state 74
    NOT          shift, and go to state 39
    NEW          shift, and go to state 40
    NULLTERM     shift, and go to state 41
    ID           shift, and go to state 53
    NUM          shift, and go to state 43
    RIGHTASSIGN  shift, and go to state 75
    '('          shift, and go to state 44
    '-'          shift, and go to state 45

    Guarded    go to state 76
    Expr       go to state 77
    Negations  go to state 51
    Term       go to state 52


State 56

   42 Expr: NEW ID .

    $default  reduce using rule 42 (Expr)


State 57

   25 Stat: ID LEFTASSIGN . Expr

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 78
    Negations  go to state 51
    Term       go to state 52


State 58

   59 Term: ID '(' . Expr RepExpr ')'

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 79
    Negations  go to state 51
    Term       go to state 52


State 59

   55 Term: '(' Expr . ')'

    ')'  shift, and go to state 80


State 60

   24 Stat: Type ID . LEFTASSIGN Expr

    LEFTASSIGN  shift, and go to state 81


State 61

   21 Stats: Stats Stat ';' .

    $default  reduce using rule 21 (Stats)


State 62

   16 Member: Type ID '(' Par Pars ')' Stats Return END .

    $default  reduce using rule 16 (Member)


State 63

   45 Negations: Negations NOT .

    $default  reduce using rule 45 (Negations)


State 64

   46 Negations: Negations '-' .

    $default  reduce using rule 46 (Negations)


State 65

   36 Expr: Negations Term .

    $default  reduce using rule 36 (Expr)


State 66

   51 OrTerm: OR . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 82


State 67

   47 PlusTerm: '+' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 83


State 68

   49 MulTerm: '*' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 84


State 69

   41 Expr: Term '>' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 85


State 70

   40 Expr: Term '#' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 86


State 71

   37 Expr: Term PlusTerm .
   48 PlusTerm: PlusTerm . '+' Term

    '+'  shift, and go to state 87

    $default  reduce using rule 37 (Expr)


State 72

   38 Expr: Term MulTerm .
   50 MulTerm: MulTerm . '*' Term

    '*'  shift, and go to state 88

    $default  reduce using rule 38 (Expr)


State 73

   39 Expr: Term OrTerm .
   52 OrTerm: OrTerm . OR Term

    OR  shift, and go to state 89

    $default  reduce using rule 39 (Expr)


State 74

   28 Conditions: COND OptGuarded END .

    $default  reduce using rule 28 (Conditions)


State 75

   31 Guarded: RIGHTASSIGN . Stats ContinueOrBreak

    $default  reduce using rule 20 (Stats)

    Stats  go to state 90


State 76

   30 OptGuarded: OptGuarded Guarded . ';'

    ';'  shift, and go to state 91


State 77

   32 Guarded: Expr . RIGHTASSIGN Stats ContinueOrBreak

    RIGHTASSIGN  shift, and go to state 92


State 78

   25 Stat: ID LEFTASSIGN Expr .

    $default  reduce using rule 25 (Stat)


State 79

   59 Term: ID '(' Expr . RepExpr ')'

    $default  reduce using rule 53 (RepExpr)

    RepExpr  go to state 93


State 80

   55 Term: '(' Expr ')' .

    $default  reduce using rule 55 (Term)


State 81

   24 Stat: Type ID LEFTASSIGN . Expr

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 94
    Negations  go to state 51
    Term       go to state 52


State 82

   51 OrTerm: OR Term .

    $default  reduce using rule 51 (OrTerm)


State 83

   47 PlusTerm: '+' Term .

    $default  reduce using rule 47 (PlusTerm)


State 84

   49 MulTerm: '*' Term .

    $default  reduce using rule 49 (MulTerm)


State 85

   41 Expr: Term '>' Term .

    $default  reduce using rule 41 (Expr)


State 86

   40 Expr: Term '#' Term .

    $default  reduce using rule 40 (Expr)


State 87

   48 PlusTerm: PlusTerm '+' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 95


State 88

   50 MulTerm: MulTerm '*' . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 96


State 89

   52 OrTerm: OrTerm OR . Term

    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44

    Term  go to state 97


State 90

   21 Stats: Stats . Stat ';'
   31 Guarded: RIGHTASSIGN Stats . ContinueOrBreak

    OBJECT    shift, and go to state 5
    INT       shift, and go to state 6
    RETURN    shift, and go to state 37
    COND      shift, and go to state 38
    CONTINUE  shift, and go to state 98
    BREAK     shift, and go to state 99
    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 42
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Type             go to state 46
    Stat             go to state 47
    Return           go to state 100
    Conditions       go to state 49
    ContinueOrBreak  go to state 101
    Expr             go to state 50
    Negations        go to state 51
    Term             go to state 52


State 91

   30 OptGuarded: OptGuarded Guarded ';' .

    $default  reduce using rule 30 (OptGuarded)


State 92

   32 Guarded: Expr RIGHTASSIGN . Stats ContinueOrBreak

    $default  reduce using rule 20 (Stats)

    Stats  go to state 102


State 93

   54 RepExpr: RepExpr . ',' Expr
   59 Term: ID '(' Expr RepExpr . ')'

    ','  shift, and go to state 103
    ')'  shift, and go to state 104


State 94

   24 Stat: Type ID LEFTASSIGN Expr .

    $default  reduce using rule 24 (Stat)


State 95

   48 PlusTerm: PlusTerm '+' Term .

    $default  reduce using rule 48 (PlusTerm)


State 96

   50 MulTerm: MulTerm '*' Term .

    $default  reduce using rule 50 (MulTerm)


State 97

   52 OrTerm: OrTerm OR Term .

    $default  reduce using rule 52 (OrTerm)


State 98

   33 ContinueOrBreak: CONTINUE .

    $default  reduce using rule 33 (ContinueOrBreak)


State 99

   34 ContinueOrBreak: BREAK .

    $default  reduce using rule 34 (ContinueOrBreak)


State 100

   22 Stat: Return .

    $default  reduce using rule 22 (Stat)


State 101

   31 Guarded: RIGHTASSIGN Stats ContinueOrBreak .

    $default  reduce using rule 31 (Guarded)


State 102

   21 Stats: Stats . Stat ';'
   32 Guarded: Expr RIGHTASSIGN Stats . ContinueOrBreak

    OBJECT    shift, and go to state 5
    INT       shift, and go to state 6
    RETURN    shift, and go to state 37
    COND      shift, and go to state 38
    CONTINUE  shift, and go to state 98
    BREAK     shift, and go to state 99
    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 42
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Type             go to state 46
    Stat             go to state 47
    Return           go to state 100
    Conditions       go to state 49
    ContinueOrBreak  go to state 105
    Expr             go to state 50
    Negations        go to state 51
    Term             go to state 52


State 103

   54 RepExpr: RepExpr ',' . Expr

    NOT       shift, and go to state 39
    NEW       shift, and go to state 40
    NULLTERM  shift, and go to state 41
    ID        shift, and go to state 53
    NUM       shift, and go to state 43
    '('       shift, and go to state 44
    '-'       shift, and go to state 45

    Expr       go to state 106
    Negations  go to state 51
    Term       go to state 52


State 104

   59 Term: ID '(' Expr RepExpr ')' .

    $default  reduce using rule 59 (Term)


State 105

   32 Guarded: Expr RIGHTASSIGN Stats ContinueOrBreak .

    $default  reduce using rule 32 (Guarded)


State 106

   54 RepExpr: RepExpr ',' Expr .

    $default  reduce using rule 54 (RepExpr)
